--- a/backend/Jenkinsfile
+++ b/backend/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent none
     environment {
         APPLICATION_PORT = '8080'
-        DATABASE_URL = credentials('DATABASE_URL')
+        DB_URL = credentials('DB_URL')
         DB_USER = credentials('DB_USER')
         DB_PASSWORD = credentials('DB_PASSWORD')
         AWS_ACCESS_KEY = credentials('AWS_ACCESS_KEY')
@@ -16,6 +16,15 @@ pipeline {
             git branch: 'main', url: 'https://github.com/Manga-Rider/backend.git'
             sh '''
                 export JAVA_HOME="/lib/jvm/jdk-21-oracle-x64"
+                
+                export APPLICATION_PORT="${APPLICATION_PORT}"
+                export DB_URL="${DB_URL}"
+                export DB_USER="${DB_USER}"
+                export DB_PASSWORD="${DB_PASSWORD}"
+                export AWS_ACCESS_KEY="${AWS_ACCESS_KEY}"
+                export AWS_SECRET_KEY="${AWS_SECRET_KEY}"
+                export AWS_BUCKET="${AWS_BUCKET}"
+                export AWS_REGION="${AWS_REGION}"
             
                 chmod 744 ./mvnw
                 rm -f .env
