--- a/backend/manga-rider-backend.service
+++ b/backend/manga-rider-backend.service
@@ -5,7 +5,8 @@ After=network.target
 
 [Service]
 Type=simple
-ExecStart=java -jar /home/jenkins/demo.jar
+ExecStart=/usr/bin/java -jar /home/jenkins/demo.jar
+EnvironmentFile=/home/jenkins/backend.conf
 TimeoutStartSec=0
 RemainAfterExit=yes
 Restart=on-failure
